--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -18,9 +18,11 @@ spec:
         {{- toYaml .Values.nginx.pod | nindent 8 }}
       {{- end }}
       container:
-        {{- if .Values.nginx.container }}
-          {{- toYaml .Values.nginx.container | nindent 8 }}
+      {{- if .Values.nginx.container }}
+        {{- with .Values.nginx.container }}
+        {{- include "filterEmptyFields" . | nindent 8 }}
         {{- end }}
+      {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
         {{- if .Values.nginx.debug }}
@@ -34,9 +36,11 @@ spec:
         {{- toYaml .Values.nginx.pod | nindent 8 }}
       {{- end }}
       container:
-        {{- if .Values.nginx.container }}
-          {{- toYaml .Values.nginx.container | nindent 8 }}
+      {{- if .Values.nginx.container }}
+        {{- with .Values.nginx.container }}
+        {{- include "filterEmptyFields" . | nindent 8 }}
         {{- end }}
+      {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
         {{- if .Values.nginx.debug }}
