--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -19,7 +19,10 @@ spec:
       {{- end }}
       container:
         {{- with .Values.nginx.container }}
-        {{- include "filterEmptyFields" . | nindent 8 }}
+        {{- $filtered := include "filterEmptyFields" . }}
+        {{- if $filtered }}
+        {{- $filtered | nindent 8 }}
+        {{- end }}
         {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
@@ -35,7 +38,10 @@ spec:
       {{- end }}
       container:
         {{- with .Values.nginx.container }}
-        {{- include "filterEmptyFields" . | nindent 8 }}
+        {{- $filtered := include "filterEmptyFields" . }}
+        {{- if $filtered }}
+        {{- $filtered | nindent 8 }}
+        {{- end }}
         {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
@@ -46,6 +52,9 @@ spec:
     {{- if .Values.nginx.service }}
     service:
       {{- with .Values.nginx.service }}
-      {{- include "filterEmptyFields" . | nindent 6 }}
+      {{- $filtered := include "filterEmptyFields" . }}
+      {{- if $filtered }}
+      {{- $filtered | nindent 6 }}
+      {{- end }}
       {{- end }}
     {{- end }}
