Generate all CRDs, update RBAC, fix Alpine tag

--- a/config/crd/bases/gateway.nginx.org_wafpolicies.yaml
+++ b/config/crd/bases/gateway.nginx.org_wafpolicies.yaml
@@ -384,6 +384,9 @@ spec:
             required:
             - targetRef
             type: object
+            x-kubernetes-validations:
+            - message: policySource is required when securityLogs are specified
+              rule: '!has(self.securityLogs) || has(self.policySource)'
           status:
             description: Status defines the state of the WAFPolicy.
             properties:
