--- a/charts/nginx-gateway-fabric/templates/scc.yaml
+++ b/charts/nginx-gateway-fabric/templates/scc.yaml
@@ -44,7 +44,6 @@ metadata:
   name: {{ include "nginx-gateway.scc-name" . }}-nginx
   labels:
   {{- include "nginx-gateway.labels" . | nindent 4 }}
-allowPrivilegeEscalation: false
 allowHostDirVolumePlugin: false
 allowHostIPC: false
 allowHostNetwork: false
@@ -70,6 +69,8 @@ seLinuxContext:
   type: MustRunAs
 seccompProfiles:
 - runtime/default
+allowedCapabilities:
+- NET_BIND_SERVICE
 requiredDropCapabilities:
 - ALL
 volumes:
