--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -394,9 +394,9 @@ nginx:
     # -- The topology spread constraints for the NGINX data plane pod.
     # topologySpreadConstraints: []
 
-    # -- extraVolumes for the NGINX data plane pod. Use in conjunction with
-    # nginx.container.extraVolumeMounts mount additional volumes to the container.
-    # extraVolumes: []
+    # -- Volumes for the NGINX data plane pod. Use in conjunction with
+    # nginx.container.VolumeMounts mount additional volumes to the container.
+    # Volumes: []
 
   # -- The container configuration for the NGINX container. This is applied globally to all Gateways managed by this
   # instance of NGINX Gateway Fabric.
@@ -407,8 +407,8 @@ nginx:
     # -- The lifecycle of the NGINX container.
     # lifecycle: {}
 
-    # -- extraVolumeMounts are the additional volume mounts for the NGINX container.
-    # extraVolumeMounts: []
+    # -- VolumeMounts are the additional volume mounts for the NGINX container.
+    # VolumeMounts: []
 
   # -- The service configuration for the NGINX data plane. This is applied globally to all Gateways managed by this
   # instance of NGINX Gateway Fabric.
