--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -493,6 +493,40 @@ nginx:
     # - port: 30025
     #   listenerPort: 80
 
+  ## Defines the settings for the data plane readiness probe. This probe returns Ready when the NGINX data plane is ready to serve traffic.
+  readinessProbe: {}
+    # @schema
+    # type: integer
+    # minimum: 1
+    # maximum: 65535
+    # @schema
+    # -- Port in which the readiness endpoint is exposed.
+    # port: 8081
+
+    # @schema
+    # type: integer
+    # minimum: 0
+    # maximum: 3600
+    # @schema
+    # -- The number of seconds after the Pod has started before the readiness probes are initiated.
+    # initialDelaySeconds: 3
+
+    # @schema
+    # type: integer
+    # minimum: 1
+    # maximum: 3600
+    # @schema
+    # -- The number of seconds between consecutive readiness probes.
+    # periodSeconds: 10
+
+    # @schema
+    # type: integer
+    # minimum: 1
+    # maximum: 3600
+    # @schema
+    # -- The number of seconds after which the readiness probe times out.
+    # timeoutSeconds: 1
+
   # -- Enable debugging for NGINX. Uses the nginx-debug binary. The NGINX error log level should be set to debug in the NginxProxy resource.
   debug: false
 
