--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -503,29 +503,7 @@ nginx:
     # -- Port in which the readiness endpoint is exposed.
     # port: 8081
 
-    # @schema
-    # type: integer
-    # minimum: 0
-    # maximum: 3600
-    # @schema
-    # -- The number of seconds after the Pod has started before the readiness probes are initiated.
-    # initialDelaySeconds: 3
-
-    # @schema
-    # type: integer
-    # minimum: 1
-    # maximum: 3600
-    # @schema
-    # -- The number of seconds between consecutive readiness probes.
-    # periodSeconds: 10
-
-    # @schema
-    # type: integer
-    # minimum: 1
-    # maximum: 3600
-    # @schema
-    # -- The number of seconds after which the readiness probe times out.
-    # timeoutSeconds: 1
+    # The Kubernetes probe can also be configured by modifying the NginxProxy resource.
 
   # -- Enable debugging for NGINX. Uses the nginx-debug binary. The NGINX error log level should be set to debug in the NginxProxy resource.
   debug: false
